# SpriteEngineUI

Engine/: CMakeLists.txt
Engine/Editor/: CMakeLists.txt
Engine/Editor/Ressources/Saves/: projects.txt
Engine/Editor/Source/: Editor.cpp  Savesystem.cpp
Engine/Editor/Source/GUI/: UITopbar.cpp
Engine/Editor/Source/GUI/ProjectSelector/: UIProjectSelector.cpp
Engine/Editor/Source/GUI/Property/Inspector/: UIInspector.cpp  UIInspectorBoxCollider.cpp  UIInspectorBoxCollider.h
Engine/Engine/Core/: CMakeLists.txt
Engine/Engine/Core/Source/Camera/: Camera.cpp  Camera.h
Engine/Engine/Core/Source/RessourceHandler/: Initializer.cpp
Engine/Engine/Core/Source/Sprite/: SpriteRepository.cpp  SpriteRepository.h
Engine/Engine/Core/Source/Sprite/Components/: BoxCollider.cpp  BoxCollider.h  PhysicsBody.cpp  PhysicsBody.h
Engine/Engine/Core/Source/Sprite/Components/Animator/: Animation.cpp  Animator.cpp  Animator.h
Engine/Engine/Core/Source/Sprite/Components/Light/: Light.cpp  Light.h  LightRepository.cpp  LightRepository.h
Engine/Engine/Math/: CMakeLists.txt
Engine/Framework/: CMakeLists.txt
Engine/Framework/Source/GameUtils/: GameUtils.cpp  GameUtils.h
Engine/Template/: CMakeLists.txt
